--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,19 @@
 {
   "manifest_version": 2,
-
   "name": "World’s most useless extension",
   "description": "Super useless",
   "version": "1.0",
-  "icons": { "16": "icons/16.png",
-             "48": "icons/48.png",
-            "128": "icons/128.png" },
-      "permissions": ["tabs"],
-	  "background": {"scripts": ["background.js"]}
+  "icons": {
+    "16": "icons/16.png",
+    "48": "icons/48.png",
+    "128": "icons/128.png"
+  },
+  "permissions": [
+    "tabs"
+  ],
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
+  }
 }
